Backend API code structure

--- a/handpicked_backend/.env.txt
+++ b/handpicked_backend/.env.txt
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql://postgres:DwP5HCRVwS*t*m-@db.gtqghwfnbzqzwkkitbet.supabase.co:5432/postgres
+PORT=5000
+JWT_SECRET=supersecretjwtkey
