--- a/handpicked_startup/package.json
+++ b/handpicked_startup/package.json
@@ -14,14 +14,16 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.8",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "3.4.17"
+    "react-icons": "^5.5.0",
+    "react-tooltip": "^5.29.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7"
+    "@types/react-dom": "^19.1.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3.4.17"
   }
 }
