--- a/handpicked_startup/package.json
+++ b/handpicked_startup/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
-    "@astrojs/tailwind": "^6.0.2",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.12.8",
+    "astro": "5.11.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-tooltip": "^5.29.1"
+    "react-router-dom": "6.14.2",
+    "react-tooltip": "^5.29.1",
+    "vite": "5.2.10"
   },
   "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "3.4.17"
+    "autoprefixer": "10.4.15",
+    "postcss": "^8.4.31",
+    "tailwindcss": "3.3.3"
   }
 }
