--- a/handpicked_startup/package.json
+++ b/handpicked_startup/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "6.14.2",
     "react-tooltip": "^5.29.1",
     "vite": "5.2.10"
