--- a/handpicked_startup/package.json
+++ b/handpicked_startup/package.json
@@ -12,6 +12,7 @@
     "@astrojs/react": "^4.3.0",
     "astro": "5.11.2",
     "axios": "^1.11.0",
+    "dompurify": "^3.2.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
