--- a/handpicked_startup/package.json
+++ b/handpicked_startup/package.json
@@ -10,6 +10,17 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
+    "@tiptap/extension-image": "^3.4.6",
+    "@tiptap/extension-link": "^3.4.6",
+    "@tiptap/extension-placeholder": "^3.4.6",
+    "@tiptap/extension-table": "^3.4.6",
+    "@tiptap/extension-table-cell": "^3.4.6",
+    "@tiptap/extension-table-header": "^3.4.6",
+    "@tiptap/extension-table-row": "^3.4.6",
+    "@tiptap/extension-text-align": "^3.4.6",
+    "@tiptap/extension-underline": "^3.4.6",
+    "@tiptap/react": "^3.4.6",
+    "@tiptap/starter-kit": "^3.4.6",
     "astro": "5.11.2",
     "axios": "^1.11.0",
     "dompurify": "^3.2.6",
@@ -19,6 +30,7 @@
     "react-quill-new": "^3.6.0",
     "react-router-dom": "6.14.2",
     "react-tooltip": "^5.29.1",
+    "tiptap-extension-resize-image": "^1.3.1",
     "vite": "5.2.10"
   },
   "devDependencies": {
