--- a/handpicked_startup/package.json
+++ b/handpicked_startup/package.json
@@ -30,6 +30,7 @@
     "react-quill-new": "^3.6.0",
     "react-router-dom": "6.14.2",
     "react-tooltip": "^5.29.1",
+    "tippy.js": "^6.3.7",
     "tiptap-extension-resize-image": "^1.3.1",
     "vite": "5.2.10"
   },
