--- a/handpicked_startup/package.json
+++ b/handpicked_startup/package.json
@@ -13,6 +13,7 @@
     "astro": "5.11.2",
     "axios": "^1.11.0",
     "dompurify": "^3.2.6",
+    "quill-better-table": "^1.2.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
