--- a/handpicked_backend/package.json
+++ b/handpicked_backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "sharp": "^0.34.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
